--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: R. Gentleman, F. Hahne, J. Kettman, N. Le Meur, N. Gopalakrishnan
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
 Description: Provides quality control and quality assessment tools for flow
              cytometry data. 
-Depends: R (>= 2.10.0), methods, BiocGenerics (>= 0.1.3), outliers, lattice, flowViz, mvoutlier, bioDist, parody, RColorBrewer, latticeExtra
+Depends: R (>= 2.10.0), methods, BiocGenerics, outliers, lattice, flowViz, mvoutlier, bioDist, parody, RColorBrewer, latticeExtra
 Imports: methods, BiocGenerics, geneplotter, flowCore, flowViz, IRanges
 Suggests: flowStats
 SystemRequirements: ImageMagick
